support Post method

--- a/Reader/Reader.csproj
+++ b/Reader/Reader.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="words.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
